Fixed misaligned LiveTV guide

--- a/CSS/css-scyfin/scyfin-theme-backdrop.css
+++ b/CSS/css-scyfin/scyfin-theme-backdrop.css
@@ -419,13 +419,7 @@
 
 
 
-/* Live TV guide reposition */
-.layout-desktop #guideTab {
-    margin-left: -75px !important;
-}
-.guide-channelHeaderCell {
-    border-style: none !important;
-}
+/* Live TV */
 /* Modified background color of active guide cells */
 .programCell-active {
     background: #181818 !important;
